--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,18 +4,16 @@
 <meta content="#6CD9FF" name="theme-color">
 <!-- Metadata -->
 <meta content="{% if page.description %}{{ page.description }}{% else %} {% endif %}" name="description">
-<meta content="bp, bob, bobpony, bob pony, bpc, bobpony.org, bobpony.com" name="keywords">
+<meta content="ibsupport, ibdocs, ibsupport.pm" name="keywords">
 <!-- Open Graph -->
 <meta content="{% if page.description %}{{ page.description }}{% else %}{% endif %}" name="og:description">
-<meta content="https://bobpony.com/img/favicon.png" property="og:image">
-<meta content="{% if page.title %}{{ page.title }} - Bob Pony{% else %}Bob Pony's website{% endif %}" property="og:title">
+<meta content="https://ibsupport.pm/img/favicon.png" property="og:image">
+<meta content="{% if page.title %}{{ page.title }} - IBSupport.PM{% else %}IBSupport.PM{% endif %}" property="og:title">
 <meta content="website" property="og:type">
-<meta content="{% if page.url %}https://bobpony.com{{ page.url }}{% else %}{% endif %}" property="og:url">
+<meta content="{% if page.url %}https://ibsupport.pm{{ page.url }}{% else %}{% endif %}" property="og:url">
 <!-- Twitter/Discord Metadata -->
 <meta content="summary" name="twitter:card">
 <meta content="{% if page.description %}{{ page.description }}{% else %}{% endif %}" name="twitter:description">
-<meta content="https://bobpony.com/img/favicon.png" name="twitter:image">
-<meta content="{% if page.title %}{{ page.title }} - Bob Pony{% else %}Bob Pony's website{% endif %}" name="twitter:title">
-<meta content="{% if page.url %}https://bobpony.com{{ page.url }}{% else %}{% endif %}" property="twitter:url">
+<meta content="https://ibsupport.pm/img/favicon.png" name="twitter:image">
 <!-- Favicon -->
 <link href="{% if page.url == "/discord/" %}/img/Discord-Logo-Color.png{% else %}/img/favicon.png{% endif %}" rel="icon">
