--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!-- Compatibility -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta content="#e00069" name="theme-color">
+<meta content="#ECA2Af" name="theme-color">
 <!-- Metadata -->
 <meta content="{% if page.description %}{{ page.description }}{% else %} {% endif %}" name="description">
 <meta content="ibsupport, ibdocs, ibsupport.pm" name="keywords">
