--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
         <a href="/" class="navbar-item {% if page.url == "/" %}is-active{% endif %}">
           <span class="icon-text">
             <span class="icon">
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-home"></i>
             </span>
             <span>Home</span>
           </span>
@@ -22,7 +22,7 @@
 		<a href="/downloads/" class="navbar-item {% if page.url == "/downloads/" %}is-active{% endif %}">
           <span class="icon-text">
             <span class="icon">
-              <i class="fas fa-download"></i>
+              <i class="fa-solid fa-download"></i>
             </span>
             <span>Downloads</span>
           </span>
@@ -31,7 +31,7 @@
 
       <div class="navbar-end">
         <a href="/contact" class="navbar-item {% if page.url == "/contact/" %}is-active{% endif %}" title="Contact">
-          <i class="fas fa-envelope"></i>
+          <i class="fa-solid fa-envelope"></i>
         </a>
       </div>
     </div>
