--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Resources -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <script src="https://kit.fontawesome.com/7a52a15489.js" crossorigin="anonymous"></script>  {% include head.html %}
+  <script src="https://ibsupport.pm/js/all.js" crossorigin="anonymous"></script>  {% include head.html %}
   <script src="{{ "/js/nav.js" | prepend: site.baseurl }}"></script>
   <title>{% if page.title %}{{ page.title }} - IBSupport{% else %}IBSupport{% endif %}</title>
 </head>
